# ChangeLog for dev-libs/libusb
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/libusb/ChangeLog,v 1.84 2009/05/14 23:28:09 robbat2 Exp $

*libusb-1.0.1 (14 May 2009)

  14 May 2009; Robin H. Johnson <robbat2@gentoo.org> +libusb-1.0.1.ebuild:
  Bug #247687: version bump to v1 series. Be sure to see the new libusb
  virtuals. Ebuild by Tiziano Müller <dev-zero@gentoo.org>.

  28 Mar 2009; Mike Frysinger <vapier@gentoo.org> libusb-0.1.12-r5.ebuild:
  Dont move the C++ lib to /lib #245645 by DarkNRG.

*libusb-0.1.12-r5 (28 Mar 2009)

  28 Mar 2009; Mike Frysinger <vapier@gentoo.org> +libusb-0.1.12-r5.ebuild:
  Use gen_usr_ldscript -a to relocate shared libs to the root dir.

*libusb-0.1.12-r4 (25 Jun 2008)

  25 Jun 2008; Robin H. Johnson <robbat2@gentoo.org>
  +files/libusb-0.1.12-no-infinite-bulk.patch, +libusb-0.1.12-r4.ebuild:
  Bug #225879, fix infinite looping during usb_bulk operations.

*libusb-0.1.12-r3 (07 Jun 2008)

  07 Jun 2008; Robin H. Johnson <robbat2@gentoo.org>
  +libusb-0.1.12-r3.ebuild:
  Make the CXX support optional, but not removed by default, per bug
  #175117.

*libusb-0.1.12-r2 (11 May 2008)

  11 May 2008; <solar@gentoo.org> +files/libusb-0.1.12-nocpp.patch,
  +libusb-0.1.12-r2.ebuild:
  - snag cross compile fix from buildroot

  20 Apr 2008; Mike Frysinger <vapier@gentoo.org> libusb-0.1.12-r1.ebuild:
  Fixup autotools #213800 by Alessandro Guido.

  06 Oct 2007; Tom Gall <tgall@gentoo.org> libusb-0.1.12-r1.ebuild:
  stable on ppc64 bug #193891

  03 Oct 2007; Christoph Mende <angelos@gentoo.org> libusb-0.1.12-r1.ebuild:
  Stable on amd64 wrt bug #193891

  28 Sep 2007; nixnut <nixnut@gentoo.org> libusb-0.1.12-r1.ebuild:
  Stable on ppc wrt bug 193891

  28 Sep 2007; Joshua Kinard <kumba@gentoo.org> libusb-0.1.12-r1.ebuild:
  Stable on mips, per #193891.

  27 Sep 2007; Jeroen Roovers <jer@gentoo.org> libusb-0.1.12-r1.ebuild:
  Stable for HPPA (bug #193891).
