@@ -3,11 +3,11 @@ AUX libusb-0.1.12-no-infinite-bulk.patch 807 RMD160 bba6194bb6cc9c0008791684c325
 AUX libusb-0.1.12-nocpp.patch 572 RMD160 cdceb6a5550a6371401046fb26a9ccc67e4a3d5d SHA1 c55022ae4965b469949329cd6839707790a44ec4 SHA256 6a9833ea9238b9df0f6a359c3d84f829bdf83e26dedb31ce9d614f9c6cda3ab0
 DIST libusb-0.1.12.tar.gz 389343 RMD160 63848df717e00fff67ab30ba86a85466370d4e8e SHA1 599a5168590f66bc6f1f9a299579fd8500614807 SHA256 37f6f7d9de74196eb5fc0bbe0aea9b5c939de7f500acba3af6fd643f3b538b44
 DIST libusb-1.0.1.tar.bz2 310554 RMD160 4ecc8262add54e5ba9defd6cd5d5819b60e38e10 SHA1 915d5a3538a6182d2eda845f91934c1ad718f19e SHA256 510b9c7339e878324066ec1cb74c0f67d5df858065155a3239999ff911257d45
-EBUILD libusb-0.1.12-r1.ebuild 1774 RMD160 519d28945f994e78d806e1f6a32d7910fb0c55cb SHA1 185c16d6343053c3c7ca46518f47ab4fe3fccd6c SHA256 4bfa61b47763251a2aa5aa6066d033389286ffc4f9eb27966433e1872f939acc
-EBUILD libusb-0.1.12-r2.ebuild 1820 RMD160 d0dfe12f12d02717fce68c15e05065fbe9e37c01 SHA1 44b02a0487544e3e2c9cf2c975a98932a7d2ad8c SHA256 3873bfc5a7baf8077f586580da03d55ff4582de94b177ba8a693b2d6149c5127
-EBUILD libusb-0.1.12-r3.ebuild 1905 RMD160 b0d5d61e990e567221fa2b138598baf3cc54e485 SHA1 10c41d9830732e29aff5a40fe0750e37d906c551 SHA256 35adafd7b6a76dcea3619a18dca5541ba87ecea24874faa1992f3e68b2374bae
-EBUILD libusb-0.1.12-r4.ebuild 1962 RMD160 9b70e8f772a78bda41e2d4b4a4fb53f68da6479b SHA1 9ab531ddf99f9c58129f5488dfbdd755c315a15c SHA256 9f26ec186fe27d9d42e9a9345447553627607fa0d54968463d8444277433caa2
-EBUILD libusb-0.1.12-r5.ebuild 1650 RMD160 7940b4bed23d606f1d7f772b2a1a130e7874da11 SHA1 6fd0f19fb88c502ff4cc98160e7cf00292bd1cf4 SHA256 ebfc45dc74b4d33c7271afb87d2c0e781cdc633be129cb37b2084c573a052440
+EBUILD libusb-0.1.12-r1.ebuild 1810 RMD160 c741d3189def038a1a06deb544fa249830134076 SHA1 0d5160c800f009656d6c5bb26172553143d0c4f2 SHA256 4663918e01dfef9e95f63f19f155f10e9daad18060020bf672581c64164f2a5c
+EBUILD libusb-0.1.12-r2.ebuild 1857 RMD160 80841569a6a2c04fbf92c03929182e9b7a0e36b2 SHA1 fce2af0f06ae342acec6bded4d35f6514c2b6600 SHA256 9c82c907c8330f60d04943bcf1dfa0098cc0a00b4349598f105119f13520ab80
+EBUILD libusb-0.1.12-r3.ebuild 1940 RMD160 79ff6186d1ecfa1e78b1d5d227b7194fe643c786 SHA1 f404693ea44e6ecf940b39ef9ea55f0f474a6755 SHA256 2042bbf0939feaa2fca01f5bd47bc89d15cb5610549049b155816a827fe5a39d
+EBUILD libusb-0.1.12-r4.ebuild 1997 RMD160 e4d5fadf04d2658b313bea9aa471c82bbeb93f2a SHA1 40dfcb0ee646e18bda4cc25b628c26eb00ef81f2 SHA256 92f85666a3640a7875128cd181b388db09854448a20f2728d55eda358e0db898
+EBUILD libusb-0.1.12-r5.ebuild 1686 RMD160 f511b02209463a74a7d46dce4327b51d878a9a23 SHA1 baa29140e844aa46dccb4f80f0ad51ed72586b18 SHA256 35dfd0980609d340187a0a75ac42faffd4afc080f43f5f70d6253e94ae162efd
 EBUILD libusb-1.0.1.ebuild 922 RMD160 e51d93128cf7b14146f89a75e352a49df351fe9e SHA1 83ded359ac666249305953841640e271ac583904 SHA256 00ca755f4306bed52b8de1ea54da8e7cd2b4a9ae9c9a13b929ed42efa67315a4
-MISC ChangeLog 10649 RMD160 757144adc960ccffcfdaf142860c808a52582a4e SHA1 4e5da1f29019ecdf7298ba1f53b6a9fdee4fad08 SHA256 f54deaa195c23820e6906c4036ccfc5a3b18f36ba066822935d075a6c372877d
+MISC ChangeLog 10961 RMD160 5b955931cf7544dd7ca6ff7c57505a2c4783d69f SHA1 3a93eb92b23eaacb655e81316700b05cec70b5de SHA256 2f141e300c15130256d8411461152a551b109dceb55eed93af15cb7651bd0d63
 MISC metadata.xml 226 RMD160 648b1f4c4f30d91596a8bb5ee6713abbe558d1ee SHA1 454eb537623437bf8d58ae3cd0418e6a898bac61 SHA256 32bd7ea3d52eaade1cad03a261cd0f75ae3b0d10787fe646ece11c752b1cdfd2
